[package]
name = "any2cast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
serde = {version = "1.0.144", features = ["derive"] }
rss = "1.10.0"
chrono = "0.4.19"
tokio = { version = "1.5.0", features = ["full"] }
config = "0.13"
futures = "0.3"
log = "0.4.14"
env_logger = "0.8.4"
toml = "0.5.8"
once_cell = "1.9.0"
clap = { version = "3.1.9", features = ["derive"] }
actix-web = "4.1.0"
handlebars = {version = "4.3.3", features = ["dir_source"] }
serde_json = "1.0.85"
actix-files = "0.6.2"
